# clawless

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: admin.yaml  default.yaml.example  skills_manifest.yaml  system_profile.yaml
docs/: AGENTS.md  PROJECT.md  TODO.md
src/: __init__.py  config.py  types.py
src/admin/: __init__.py  analyzer.py  implementer.py  main.py  notifier.py  service.py
src/channels/: base.py  text.py
src/clawless/: __init__.py  agent.py  main.py
src/clawless/llm/: router.py
src/clawless/skills/: base.py
src/memory/: extractor.py  manager.py
src/skills/: proposer.py
src/user/: __init__.py  config.py  guard.py  kernel.py  llm.py  main.py  sandbox.py  types.py
src/user/skills/: base.py
src/user/skills/cli/: __init__.py  skill.py
src/user/skills/memory/: __init__.py  extractor.py  manager.py  skill.py
src/user/skills/proposer/: __init__.py  skill.py
src/user/skills/reasoning/: __init__.py  skill.py
